# atb_api_public

./: .gitignore  README.md  requirements.txt  setup.cfg
examples/: gaussian_input.py  get_alternative_conformations.py  pdb_search.py  simple_examples.py
src/atb_api/: __init__.py  atb_api.py
src/atb_api_public/: atb_api.py
src2/: atb_api.py
src3/: atb_api.py
