[metadata]
name = atb_api
version = 0.1
author = Martin Stroet, Bertrand Caron
author_email = m.stroet@uq.edu.au
classifiers =
    Environment :: Console
    Framework :: Setuptools Plugin
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = GPLv3
license_files = LICENSE
description = API for the ATB webservice
long_description = file: README.md

[options]
package_dir=
    =src
packages=find:
install_requires =
    importlib-metadata; python_version<"3.8"
    pyyaml>=6.0

[options.packages.find]
where=src
